base/20-taxcalc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxcalc-api
  labels:
    app.kubernetes.io/name: taxcalc-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: taxcalc-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
