base/21-taxcalc-agent-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxcalc-agent-svc
  labels:
    app.kubernetes.io/name: taxcalc-agent-svc
    app.kubernetes.io/component: agent
    app.kubernetes.io/part-of: taxcalc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: taxcalc-agent-svc
  ports:
    - name: http
      port: 8080
      targetPort: http
